Troubleshooting valid_friends() and registration page

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -71,7 +71,7 @@
     </div>
 </div>
 
-<div class="modal fade" id="intolModal" tabindex="-1" role="dialog" aria-labelledby="addIntolModalLabel" aria-hidden="true">
+<div class="modal fade" id="intolRegisterModal" tabindex="-1" role="dialog" aria-labelledby="addIntolModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content" role="document">
             <div class="modal-header">
