Added a back to dashboard button to change email

--- a/app/templates/auth/change_email.html
+++ b/app/templates/auth/change_email.html
@@ -20,6 +20,7 @@
                     {{ render_field(form.email2, style="width: 75%", rows="1", maxlength=200) }}
                     {{ render_field(form.password, style="width: 75%", rows="1") }}<br>
                 <input type="submit" class="btn btn-sm btn-info btn-default" value="Submit">
+                <a href="{{  url_for('profiles.dashboard')  }}" class="btn btn-sm btn-default">>Back to Dashboard</button>
             </form>
         </div>   
     </div>
