Cosmetic changes to wording in forms, initiated by PM Todd

--- a/app/templates/main/500.html
+++ b/app/templates/main/500.html
@@ -5,7 +5,7 @@
 {% block page_content %}
 <div class="page-header">
     <h1>Internal Server Error</h1>
-    <p>Oh no! Something has gone terribly awry. I don't have error logging yet. 
+    <p>Oh no! Something has gone terribly awry.
         Would you mind emailing me at <a href="mailto:kindtableapp@gmail.com?Subject=500 Error Report" target="_top">kindtableapp@gmail.com</a> to tell me what you were doing when things went boom?</p>
  
 </div>
