--- a/app/templates/main/base.html
+++ b/app/templates/main/base.html
@@ -88,7 +88,7 @@ display:none;
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="{{  url_for('profiles.show_dashboard')  }}">Dashboard</a>
+                        <a href="{{  url_for('profiles.show_dashboard')  }}">My Dashboard</a>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Friends<span class="caret"></span></a>
@@ -136,6 +136,7 @@ display:none;
                     </li>
                 </ul>    
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a href="{{ url_for('main.index')  }}">Instructions</a></li>
                     <li><a href="{{ url_for('auth.logout')  }}">Log out</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
